syntax = "proto3";
package DataExchangeProtocol;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Kernel";

enum ExchangeResult {
	NONE = 0;
	SUCCESS = 1;
	FAILED = 2;
}

message CertificateDTO {
	int32 id = 1;
	string certificateHash = 2;
	string algorithm = 3;
	google.protobuf.Timestamp startDate = 4;
	google.protobuf.Timestamp endDate = 5;
}

message UserDTO {
	int32 id = 1;
	string userName = 2;
	string userPhone = 3;
	string userComment = 4;
	repeated CertificateDTO certificatesList = 5;
}

message HostDTO {
	string hostName = 1;
	string ip = 2;
	int32 connectionPort = 3; 
}

message SettingsDTO {
	int32 verificationFrequency = 1;
	string mainServerIP = 2;
	int32 mainServerPort = 3;
}

message SingleUserRequest {
	UserDTO user = 1;
}

message MultipleUsersRequest {
	repeated UserDTO users = 1;
}

message HostRequest {
	HostDTO host = 1;
}

message SettingsRequest {
	SettingsDTO settings = 1;
}

message Response {
	ExchangeResult result = 1;
	string comment = 2;
}

message SettingsResponse {
	SettingsDTO settings = 1;
}

service ExchangeService {
	rpc RegisterSingleUser (SingleUserRequest) returns (Response);
	rpc RegisterMultipleUsers (MultipleUsersRequest) returns (Response);
	rpc RegisterHost (HostRequest) returns (Response);
	rpc GetSettings (SettingsRequest) returns (SettingsResponse);
}